force-app/main/default/objects/custom_create59__c/custom_create59__c.object-meta.xml
<CustomObject>
    <label>Custom created object59</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects59</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>