force-app/main/default/objects/custom_create59__c/fields/custom_create_59field658__c.field-meta.xml
<CustomField>
    <fullName>custom_create_59field658__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 59field658</label>
    <type>Checkbox</type>
</CustomField>